# axum-full-course

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
module-01-intro/: Cargo.toml  README.md
module-01-intro/src/: main.rs
module-02-routing/: Cargo.toml  README.md
module-02-routing/src/: main.rs
module-03-extractors/: Cargo.toml  README.md
module-03-extractors/src/: main.rs
module-04-responses/: Cargo.toml  README.md
module-04-responses/src/: main.rs
module-05-state/: Cargo.toml  README.md
module-05-state/src/: main.rs
module-06-middleware/: Cargo.toml  README.md
module-06-middleware/src/: main.rs
module-07-errors/: Cargo.toml  README.md
module-08-database/: Cargo.toml  README.md
module-08-database/src/: main.rs
module-09-auth/: Cargo.toml  README.md
module-09-auth/src/: main.rs
module-10-advanced/: Cargo.toml  README.md
module-10-advanced/src/: main.rs
module-11-testing/: Cargo.toml  README.md
module-11-testing/src/: main.rs
module-12-production/: Cargo.toml  README.md
module-12-production/src/: main.rs
tests/: module-01.REST  module-02.REST  module-03.REST  module-04.REST  module-05.REST  module-06.REST  module-07.REST  module-08.REST  module-09.REST  module-10.REST  module-12.REST
